chore: Adds some basic routing (detail route is not quite working)

--- a/src/index.html
+++ b/src/index.html
@@ -23,12 +23,18 @@
     <div ui-view="header"></div>
     <div ui-view="content" class="main-app-content"></div>
 
-    <h1>FL Vote!</h1>
 
+    <!-- Libs -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-messages.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script type="text/javascript" src="scripts/index.js"></script>
+
+    <!-- App -->
+    <script type="text/javascript" src="app/index.js"></script>
+    <script type="text/javascript" src="app/index.route.js"></script>
+    <script type="text/javascript" src="app/errors/errors.js"></script>
+    <script type="text/javascript" src="app/bill/bill.controller.js"></script>
+    <script type="text/javascript" src="app/bills/bills.controller.js"></script>
 
   </body>
 
