trying to wire up BillsSvc

--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
 
     <!-- App -->
     <script type="text/javascript" src="app/index.js"></script>
+    <script type="text/javascript" src="app/services/BillsSvc.js"></script>
     <script type="text/javascript" src="app/index.route.js"></script>
     <script type="text/javascript" src="app/errors/errors.js"></script>
     <script type="text/javascript" src="app/bill/bill.controller.js"></script>
