--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,10 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- Bootstrap min-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/css/bootstrap.min.css">
+      
+         <!-- Custom Styles -->
 
+        <link rel="stylesheet" href="app/assets/css/custom.css">
   </head>
 
   <body>
@@ -36,6 +39,11 @@
     <script type="text/javascript" src="app/errors/errors.js"></script>
     <script type="text/javascript" src="app/bill/bill.controller.js"></script>
     <script type="text/javascript" src="app/bills/bills.controller.js"></script>
+      
+       <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/bootstrap.min.js"></script>
 
   </body>
 
