feat: add Disqus comments to bill pages

--- a/src/public/app/bill/bill.html
+++ b/src/public/app/bill/bill.html
@@ -73,5 +73,12 @@
             <p>{{sponsor.person.name}}</p>
         </div>
     </div>
+
+    <hr>
+    <p><strong>Comments:</strong></p>
+    <dir-disqus config="BillCtrl.disqusConfig"></dir-disqus>
+<!--     <div id="disqus_thread"></div>
+
+    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript> -->
 </div>
 
