--- a/src/public/index.html
+++ b/src/public/index.html
@@ -56,6 +56,7 @@
     <script type="text/javascript" src="app/errors/errors.js"></script>
     <script type="text/javascript" src="app/bill/bill.controller.js"></script>
     <script type="text/javascript" src="app/bills/bills.controller.js"></script>
+    <script type="text/javascript" src="app/assets/js/dirDisqus.js"></script>
 
   </body>
 
