--- a/src/public/app/bill/bill.html
+++ b/src/public/app/bill/bill.html
@@ -1,84 +1,108 @@
 <div class="container">
-    <h2>{{BillCtrl.bill.attributes.identifier}}: {{BillCtrl.bill.attributes.title}}</h2>
-
-    <a class="btn btn-danger vote" target="_blank" ng-href="{{BillCtrl.bill.voteNoLink}}"><span
-            class="glyphicon glyphicon-menu-down"></span>Vote #no <strong>{{BillCtrl.bill.twitterVotes.no}}</strong></a>
-    <a class="btn btn-success vote" target="_blank" ng-href="{{BillCtrl.bill.voteYesLink}}"><span
-            class="glyphicon glyphicon-menu-up"></span>Vote #yes <strong>{{BillCtrl.bill.twitterVotes.yes}}</strong></a>
-
-    <h3>
-        Legislative Session:
-        <span ng-bind="BillCtrl.bill.attributes.legislative_session.name"></span>
-    </h3>
-
-    <p>
-        <strong>Subjects:</strong>
-        <a ui-sref="bills.bySubject({subject: subject})" ng-repeat="subject in BillCtrl.bill.attributes.subject" class="badge" style="margin:5px">{{subject}}</a>
-    </p>
-
-    <hr>
-    <p><strong>Actions:</strong></p>
-    <table class="table table-striped table-bordered">
-        <thead>
-            <tr>
-                <th>#</th>
-                <th>Date</th>
-                <th>Action</th>
-                <th>Organization</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr ng-repeat="action in BillCtrl.bill.attributes.actions">
-                <td><strong>{{action.order + 1}}</strong></td>
-                <td>{{action.date}}</td>
-                <td>{{action.description}}</td>
-                <td>{{action.organization.name}} ({{action.organization.classification}})</td>
-            </tr>
-        </tbody>
-    </table>
-    <!-- <div >
-        <span>{{ action.note }}</span>
-        <div>
-            <a ng-href="{{source.url}}" target="_blank">{{source.url}}</a>
+    <div class="row">
+        <!-- BILL TITLE -->
+        <div class="col-md-12">
+            <h2>{{BillCtrl.bill.attributes.identifier}}: {{BillCtrl.bill.attributes.title}}</h2>
         </div>
-    </div> -->
-
-    <hr>
-    <p><strong>Sources:</strong></p>
-    <div ng-repeat="source in BillCtrl.bill.attributes.sources">
-        <span>{{ source.note }}</span>
-        <div>
-            <a ng-href="{{source.url}}" target="_blank">{{source.url}}</a>
+        <div class="col-md-6">
+            <h3>
+                Legislative Session:
+                <span ng-bind="BillCtrl.bill.attributes.legislative_session.name"></span>
+            </h3>
+        </div>
+        <!-- VOTE BTNS -->
+        <div class="col-md-6">
+            <a class="btn btn-danger vote" target="_blank" ng-href="{{BillCtrl.bill.voteNoLink}}"><span
+                    class="glyphicon glyphicon-menu-down"></span>Vote #no <strong>{{BillCtrl.bill.twitterVotes.no}}</strong></a>
+            <a class="btn btn-success vote" target="_blank" ng-href="{{BillCtrl.bill.voteYesLink}}"><span
+                    class="glyphicon glyphicon-menu-up"></span>Vote #yes <strong>{{BillCtrl.bill.twitterVotes.yes}}</strong></a>
+        </div>
+        <div class="col-md-12">
+            <hr/>
         </div>
     </div>
-
-    
-    <span ng-if="BillCtrl.bill.attributes.documents.length > 0">
-        <hr>
-        <p><strong>Learn More (Documents):</strong></p>
-        <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
-            {{doc.note}}
-            <div ng-repeat="link in doc.links" style="margin-left:10px;">
-                <a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
+    <div class="row">
+        <!-- LEFT -->
+        <div class="col-md-8">
+            <!-- ACTIONS -->
+            <div class="panel panel-default">
+                <div class="panel-heading"><strong>Recent Actions</strong></div>
+                <div class="panel-body">
+                    <table class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th>#</th>
+                                <th style="width:100px;">Date</th>
+                                <th>Action</th>
+                                <th>Organization</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr ng-repeat="action in BillCtrl.bill.attributes.actions | orderBy:'date':true ">
+                                <td><strong>{{action.order + 1}}</strong></td>
+                                <td>{{action.date}}</td>
+                                <td>{{action.description}}</td>
+                                <td>{{action.organization.name}} ({{action.organization.classification}})</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <!-- COMMENTS -->
+            <div class="panel panel-default">
+                <div class="panel-heading"><strong>Comments</strong></div>
+                <div class="panel-body">
+                    <dir-disqus config="BillCtrl.disqusConfig"></dir-disqus>
+                </div>
             </div>
         </div>
-    </span>
-    
-
-    <hr>
-    <p><strong>Sponsorships:</strong></p>
-    <div ng-repeat="sponsor in BillCtrl.bill.attributes.sponsorships">
-        <div>
-            <img ng-src="{{sponsor.person.image}}" height="200"/>
-            <p>{{sponsor.person.name}}</p>
+        <!-- RIGHT -->
+        <div class="col-md-4">
+            <!-- SUBJECTS -->
+            <div class="panel panel-default">
+                <div class="panel-heading"><strong>Subjects</strong></div>
+                <div class="panel-body">
+                    <a ui-sref="bills.bySubject({subject: subject})" ng-repeat="subject in BillCtrl.bill.attributes.subject" class="badge" style="margin:5px">{{subject}}</a>
+                </div>
+            </div>
+            <!-- SOURCES -->
+            <div class="panel panel-default">
+                <div class="panel-heading"><strong>Sources</strong></div>
+                <div class="panel-body" style="overflow-wrap: break-word;">
+                    <ul>
+                        <li ng-repeat="source in BillCtrl.bill.attributes.sources">
+                            <span>{{ source.note }}</span>
+                            <div>
+                                <a ng-href="{{source.url}}" target="_blank">{{source.url}}</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Learn More -->
+            <div class="panel panel-default" ng-if="BillCtrl.bill.attributes.documents.length > 0">
+                <div class="panel-heading"><strong>Learn More (Documents)</strong></div>
+                <div class="panel-body" style="overflow-wrap: break-word;">
+                    <div ng-repeat="doc in BillCtrl.bill.attributes.documents" style="margin:5px;">
+                        {{doc.note}}
+                        <div ng-repeat="link in doc.links" style="margin-left:10px;">
+                            <a ng-href="{{link.url}}" target="_blank">{{link.url}}</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- Sponsorships -->
+            <div class="panel panel-default">
+                <div class="panel-heading"><strong>Sponsorships</strong></div>
+                <div class="panel-body" style="overflow-wrap: break-word;">
+                    <div ng-repeat="sponsor in BillCtrl.bill.attributes.sponsorships">
+                        <div>
+                            <img ng-src="{{sponsor.person.image}}" height="200" />
+                            <p>{{sponsor.person.name}}</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
-
-    <hr>
-    <p><strong>Comments:</strong></p>
-    <dir-disqus config="BillCtrl.disqusConfig"></dir-disqus>
-<!--     <div id="disqus_thread"></div>
-
-    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript> -->
 </div>
-
