feat: Add header nav & about page & contact page

--- a/src/public/app/bill/bill.html
+++ b/src/public/app/bill/bill.html
@@ -22,8 +22,8 @@
         </div>
     </div>
     <div class="row">
-        <!-- LEFT -->
-        <div class="col-md-8">
+        <!-- FULL -->
+        <div class="col-md-12">
             <!-- ACTIONS -->
             <div class="panel panel-default">
                 <div class="panel-heading"><strong>Recent Actions</strong></div>
@@ -48,6 +48,9 @@
                     </table>
                 </div>
             </div>
+        </div>
+        <!-- LEFT -->
+        <div class="col-md-8">
             <!-- COMMENTS -->
             <div class="panel panel-default">
                 <div class="panel-heading"><strong>Comments</strong></div>
