style: home masthead bg

--- a/src/public/app/bills/bills.html
+++ b/src/public/app/bills/bills.html
@@ -1,8 +1,10 @@
-<div style="background-color:#333; padding:20px 0;">
+<div style="background: url(../app/assets/img/fl-leg-blur-bg2.png) center center;
+    background-size: 100%;
+    background-repeat: no-repeat; padding:20px 0;">
     <div class="container">
         <!-- Register To Vote -->
         <div class="row">
-            <div class="col-xs-12 col-md-8" style="color:#fff">
+            <div class="col-xs-12 col-md-8 home-masthead" style="color:#fff">
                 <h1>Vote with a Tweet!</h1>
                 <p>Welcome! Use #FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
                 <h3>Vote Yes or No in just 3 easy steps:</h3>
