chore: update page instructions

--- a/src/public/app/bills/bills.html
+++ b/src/public/app/bills/bills.html
@@ -1,11 +1,12 @@
 <div style="background: url(../app/assets/img/fl-leg-blur-bg2.png) center center;
-    background-size: 100%;
+    background-size: cover;
     background-repeat: no-repeat; padding:20px 0;">
     <div class="container">
         <!-- Register To Vote -->
         <div class="row">
             <div class="col-xs-12 col-md-8 home-masthead" style="color:#fff">
-                <h1>Vote with a Tweet!</h1>
+                <h1 style="color:#fff;font-size:4em; padding:.8em 0; line-height:1.3em;">Social Voting to Raise Awareness around State and Local Legislation.</h1>
+                <!-- <h1>Vote with a Tweet!</h1>
                 <p>Welcome! Use #FLVote to harness Twitter to influence Bills in the Florida Legislature.</p>
                 <h3>Vote Yes or No in just 3 easy steps:</h3>
                 <ol>
@@ -14,11 +15,12 @@
                     <li>Share it on Twitter</li>
                 </ol>
                 <p>Promote your views or add your favorite hashtag by customizing your tweet before sharing. If someone ReTweets yours, then that’s another vote for your side.</p>
-                <p>We don’t store any of your info. The conversation happens out on the Twitterverse.</p>
+                <p>We don’t store any of your info. The conversation happens out on the Twitterverse.</p> -->
             </div>
             <div class="col-xs-12 col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-body text-center">
+                        <img src="../app/assets/img/fl-seal.jpg" alt="" style="width:30%;">
                         <h1>Are you Registered to Vote in FL?</h1>
                         <p>The first step to making a real difference in your community is registering to vote!</p>
                         <br/>
@@ -35,10 +37,32 @@
         </div>
     </div>
 </div>
+
+<div class="container">
+    <!-- HOW IT WORKS -->
+    <div class="row" style="margin:40px 0;">
+        <div class="col-md-4">
+            <i class="fa fa-university text-center fa-4x"></i>
+            <h2>Discover New Legislature</h2>
+            <p>Find bills that matter to you. Use the search bar below to search for bills by keyword, or click on a subject tag to find bills related to that topic.</p>
+        </div>
+        <div class="col-md-4">
+            <i class="fa fa-comments text-center fa-4x"></i>
+            <h2>Join the Conversation</h2>
+            <p>Comments are the best way for everyone to learn from each other. See what others have been saying about each bill and share your own point of view. </p>
+        </div>
+        <div class="col-md-4">
+            <i class="fa fa-twitter text-center fa-4x"></i>
+            <h2>Vote with a Tweet</h2>
+            <p>Spread awareness for bills that are important to you by sharing them on Twitter with a vote of <strong>#Yes</strong> or <strong>#No</strong>. View the social vote totals for each bill to measure community support.</p>
+        </div>
+    </div>
+</div>
+<hr>
 <div class="container">
     <!-- Bills List -->
-    <h1>Recent Bills</h1>
     <div class="row">
+        <h1>Recent Bills</h1>
         <div class="panel panel-default">
             <div class="panel-body">
                 <form class="form-inline">
