style: twitter vote buttons

--- a/src/public/app/bill/bill.html
+++ b/src/public/app/bill/bill.html
@@ -57,6 +57,10 @@
             <!-- COMMENTS -->
             <div class="panel panel-default">
                 <div class="panel-heading"><strong>Converstion</strong></div>
+                <pre>
+                    http://local.flvote.org:8080/ocd-bill_f58c4471-67c0-47ac-af36-8b64f6655e3a#disqus_thread
+                    {{BillCtrl.disqusConfig}}
+                </pre>
                 <div class="panel-body">
                     <dir-disqus config="BillCtrl.disqusConfig"></dir-disqus>
                 </div>
