--- a/src/public/index.html
+++ b/src/public/index.html
@@ -47,6 +47,7 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-messages.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.0.0/lodash.min.js"></script>
+    <script type="text/javascript" src="app/assets/js/moment.js"></script>
 
     <!-- App -->
     <script type="text/javascript" src="app/index.js"></script>
@@ -57,6 +58,17 @@
     <script type="text/javascript" src="app/bill/bill.controller.js"></script>
     <script type="text/javascript" src="app/bills/bills.controller.js"></script>
     <script type="text/javascript" src="app/assets/js/dirDisqus.js"></script>
+    <script id="dsq-count-scr" src="//flvote.disqus.com/count.js" async></script>
+
+    <script>
+      // DISQUS.reset({
+      //   reload: true,
+      //   // config: function () {  
+      //   //   this.page.identifier = "newidentifier";  
+      //   //   this.page.url = "http://example.com/#!newthread";
+      //   // }
+      // });
+    </script>
 
   </body>
 
